--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LOGIN</title>
+  <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@400;500;700&display=swap');
@@ -16,16 +16,16 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 120vh;
+      min-height: 130vh;
       width: 100%;
-      background-color:#e4ba98;
+      background-color: #FFF;
       background-position: center;
       background-size: cover;
     }
     .form-box {
       position: relative;
       width: 400px;
-      height: 450px;
+      height: 560px;
       background: transparent;
       border: 2px solid #a44e24;
       border-radius: 20px;
@@ -36,7 +36,7 @@
     }
     h2 {
       font-size: 2em;
-      color: #be8b2d;
+      color: #E3D127;
       text-align: center;
     }
     .inputbox {
@@ -97,7 +97,7 @@
       width: 100%;
       height: 40px;
       border-radius: 40px;
-      color: #121212;
+      color: #FFF;
       background: #a44e24;
       border: none;
       outline: none;
@@ -108,18 +108,18 @@
       transition: 0.4s;
     }
     button:hover {
-      color: #303030;
+      color: #817979;
       background: #c26a3e;
     }
     .register {
       font-size: .9em;
-      color: #121212;
+      color: #bab5b5;
       text-align: center;
       margin: 25px 0 10px;
     }
     .register p a {
       text-decoration: none;
-      color: #be8b2d;
+      color: #E3D127;
       font-weight: 600;
     }
     .register p a:hover {
@@ -133,11 +133,12 @@
       <a class="navbar-brand mb-0 h1" href="#"><img src="/img/brand-name.png" alt="Logo"></a>
     </div>
   </nav>
+  
   <section>
     <div class="form-box">
       <div class="form-value">
-        <form id="loginForm">
-          <h2>Login</h2>
+        <form id="registerForm">
+          <h2>Register</h2>
           <div class="inputbox">
             <ion-icon name="mail-outline"></ion-icon>
             <input type="email" id="email" required>
@@ -148,12 +149,14 @@
             <input type="password" id="password" required>
             <label for="password">Password</label>
           </div>
-          <div class="forget">
-            <label for="remember"><input type="checkbox" id="remember">Remember Me <a href="#">Forget Password</a></label>
+          <div class="inputbox">
+            <ion-icon name="lock-closed-outline"></ion-icon>
+            <input type="password" id="confirmPassword" required>
+            <label for="confirmPassword">Confirm Password</label>
           </div>
-          <button type="submit">Log in</button>
+          <button type="submit">Register</button>
           <div class="register">
-            <p>Don't have an account? <a href="index4.html">Register</a></p>
+            <p>Already have an account? <a href="http://174.138.27.151:8081/login.html">Login</a></p>
           </div>
         </form>
       </div>
@@ -163,48 +166,18 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    document.getElementById('loginForm').addEventListener('submit', async function(event) {
+    document.getElementById('registerForm').addEventListener('submit', function(event) {
       event.preventDefault();
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
-      const remember = document.getElementById('remember').checked;
-  
-      if (email === "" || password === "") {
-        alert('Please fill out all fields.');
+      const confirmPassword = document.getElementById('confirmPassword').value;
+
+      if (password !== confirmPassword) {
+        alert('Passwords do not match!');
         return;
       }
-  
-      // Prepare the data to be sent in the request
-      const data = { email, password };
-  
-      try {
-        // Send a POST request to the /login route
-        const response = await fetch('http://174.138.27.151:5000/api/login', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify(data),
-        });
-  
-        // Parse the JSON response
-        const result = await response.json();
-  
-        if (response.ok) {
-          // Handle success, e.g., save the token and user_id, navigate to another page, etc.
-          alert('Login successful! Remember Me: ' + (remember ? 'Yes' : 'No') + '\nToken: ' + result.token);
-          // Example: Save the token and user_id
-          localStorage.setItem('token', result.token);
-          localStorage.setItem('user_id', result.user_id);
-          window.location.href = 'http://174.138.27.151:8081/landingpage.html';
-        } else {
-          // Handle failure, e.g., show an error message
-          alert('Invalid credentials');
-        }
-      } catch (error) {
-        console.error('Error during fetch operation:', error);
-        alert('An error occurred. Please try again.');
-      }
+
+      alert('Registration successful!');
     });
   </script>
 </body>
