--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -153,7 +153,7 @@
           </div>
           <button type="submit">Log in</button>
           <div class="register">
-            <p>Don't have an account? <a href="index4.html">Register</a></p>
+            <p>Don't have an account? <a href="register.html">Register</a></p>
           </div>
         </form>
       </div>
