--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -67,7 +67,7 @@
       outline: none;
       font-size: 1em;
       padding: 0 35px 0 5px;
-      color: #fff;
+      color: #000000;
     }
     .inputbox ion-icon {
       position: absolute;
