--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -166,6 +166,7 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
+    document.addEventListener('DOMContentLoaded', function() {
     document.getElementById('registerForm').addEventListener('submit', async function(event) {
       event.preventDefault();
       const username = document.getElementById('username').value; // Get the username from the form
@@ -205,6 +206,7 @@
         alert('Registration failed: ' + error.message);
       }
     });
+  });
   </script>
 </body>
 </html>
