--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -147,8 +147,8 @@
         <i class="fa-solid fa-cart-plus" style="color: white;"></i>
       </a>
       <div class="col-md-2 text-end">
-        <a href="login.html" class="btn btn-outline-warning me-2">Login</a>
-        <a href="register.html" class="btn btn-dark">Sign-up</a>
+        <a href="login.html" id="loginButton" class="btn btn-outline-warning me-2">Login</a>
+        <a href="register.html" id="registerButton" class="btn btn-dark">Sign-up</a>
       </div>
     </div>
   </nav>
@@ -417,6 +417,14 @@
         }
       });
     });
+    document.addEventListener('DOMContentLoaded', function() {
+    // Check if the access token exists in local storage
+    if (localStorage.getItem('accessToken')) {
+      // If the token exists, hide the login and register buttons
+      document.getElementById('loginButton').style.display = 'none';
+      document.getElementById('registerButton').style.display = 'none';
+    }
+  });
   </script>
 </body>
 </html>
