--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -419,7 +419,7 @@
     });
     document.addEventListener('DOMContentLoaded', function() {
     // Check if the access token exists in local storage
-    if (localStorage.getItem('accessToken')) {
+    if (localStorage.getItem('token')) {
       // If the token exists, hide the login and register buttons
       document.getElementById('loginButton').style.display = 'none';
       document.getElementById('registerButton').style.display = 'none';
