--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -442,8 +442,8 @@
       localStorage.removeItem('token');
 
       // Optionally, redirect the user to the login page or refresh the page
-      window.location.href = 'login.html'; // Redirect to login page
-      // window.location.reload(); // Or simply reload the current page
+      // window.location.href = 'login.html'; // Redirect to login page
+      window.location.reload(); // Or simply reload the current page
     });
 
   }); 
