--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -133,7 +133,7 @@
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light mb-4" style="background-color: #a44e24;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="/img/brand-name.png" alt="Logo"></a>
+      <a class="navbar-brand" href="landingpage.html"><img src="vendorkita.png" alt="Logo"></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
           <div id="the-basics">
