--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -16,16 +16,16 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 120vh;
+      min-height: 100vh;
       width: 100%;
-      background-color:#e4ba98;
+      background-color:#fff;
       background-position: center;
       background-size: cover;
     }
     .form-box {
       position: relative;
       width: 400px;
-      height: 450px;
+      height: 500px;
       background: transparent;
       border: 2px solid #a44e24;
       border-radius: 20px;
@@ -36,7 +36,7 @@
     }
     h2 {
       font-size: 2em;
-      color: #be8b2d;
+      color: #a44e24;
       text-align: center;
     }
     .inputbox {
@@ -54,10 +54,13 @@
       color: #121212;
       font-size: 1em;
       pointer-events: none;
+      transition: 0.3s;
     }
-    input:focus ~ label,
-    input:focus ~ label {
+    .inputbox input:focus ~ label,
+    .inputbox input:valid ~ label {
       top: -5px;
+      font-size: 0.9em;
+      color: #be8b2d;
     }
     .inputbox input {
       width: 100%;
@@ -67,7 +70,12 @@
       outline: none;
       font-size: 1em;
       padding: 0 35px 0 5px;
-      color: #fff;
+      color: #121212;
+    }
+    .inputbox input:focus,
+    .inputbox input:valid {
+      outline: none;
+      box-shadow: none;
     }
     .inputbox ion-icon {
       position: absolute;
@@ -97,7 +105,7 @@
       width: 100%;
       height: 40px;
       border-radius: 40px;
-      color: #121212;
+      color: #fff;
       background: #a44e24;
       border: none;
       outline: none;
@@ -108,7 +116,7 @@
       transition: 0.4s;
     }
     button:hover {
-      color: #303030;
+      color: #f4f4f4;
       background: #c26a3e;
     }
     .register {
