--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -16,7 +16,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 130vh;
+      min-height: 100vh;
       width: 100%;
       background-color: #FFF;
       background-position: center;
@@ -25,7 +25,7 @@
     .form-box {
       position: relative;
       width: 400px;
-      height: 560px;
+      height: 500px;
       background: transparent;
       border: 2px solid #a44e24;
       border-radius: 20px;
@@ -36,14 +36,14 @@
     }
     h2 {
       font-size: 2em;
-      color: #E3D127;
+      color: #a44e24;
       text-align: center;
     }
     .inputbox {
       position: relative;
       margin: 30px 0;
       width: 310px;
-      border-bottom: 2px solid #121212;
+      margin-bottom: 2px solid #121212;
       transition: .5s;
     }
     .inputbox label {
@@ -54,20 +54,29 @@
       color: #121212;
       font-size: 1em;
       pointer-events: none;
+      transition: 0.3s;
     }
-    input:focus ~ label,
-    input:focus ~ label {
+    .inputbox input:focus ~ label,
+    .inputbox input:valid ~ label {
       top: -5px;
+      font-size: 0.9em;
+      color: #be8b2d;
     }
     .inputbox input {
       width: 100%;
       height: 50px;
       background: transparent;
       border: none;
+      border-bottom: 2px solid #121212;
       outline: none;
       font-size: 1em;
-      padding: 0 35px 0 5px;
-      color: #000000;
+      padding: 0 5px;
+      color: #121212;
+    }
+    .inputbox input:focus,
+    .inputbox input:valid {
+      outline: none;
+      box-shadow: none;
     }
     .inputbox ion-icon {
       position: absolute;
@@ -108,7 +117,7 @@
       transition: 0.4s;
     }
     button:hover {
-      color: #817979;
+      color: #f4f4f4;
       background: #c26a3e;
     }
     .register {
@@ -119,7 +128,7 @@
     }
     .register p a {
       text-decoration: none;
-      color: #E3D127;
+      color: #be8b2d;
       font-weight: 600;
     }
     .register p a:hover {
