--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -483,7 +483,11 @@ document.addEventListener('DOMContentLoaded', function() {
                   <h5 class="fw-bolder">${product.name}</h5>
                   <div class="d-flex justify-content-center small mb-2"></div>
                   <!-- Access the price directly -->
-                  ${product.price}
+                  Rp. ${product.price}
+                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View Details</a></div>
+              </div>
+                  
                 </div>
               </div>
             </div>
