--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -485,7 +485,7 @@ document.addEventListener('DOMContentLoaded', function() {
                   <!-- Access the price directly -->
                   Rp. ${product.price}
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View Details</a></div>
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="product.html?product_id=${product.id}">View Details</a></div>
               </div>
                   
                 </div>
