--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -473,6 +473,8 @@ document.addEventListener('DOMContentLoaded', function() {
       const productsContainer = document.querySelector('#products-container');
       data.forEach(product => {
         const productHTML = `
+        <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
           <div class="col mb-5">
             <div class="card h-100 product-card">
               <!-- Access the image URL directly -->
@@ -487,7 +489,8 @@ document.addEventListener('DOMContentLoaded', function() {
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="product.html?product_id=${product.product_id}">View Details</a></div>
               </div>
-                  
+              </div>
+                </div>
                 </div>
               </div>
             </div>
