--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -291,7 +291,8 @@
           </div>
           <div class="col mb-5">
             <div class="card h-100 product-card">
-              <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+              <div id="products-container" class="row"></div>
+              <!-- <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
               <div class="card-body p-4">
                 <div class="text-center">
                   <h5 class="fw-bolder">Popular Item</h5>
@@ -299,7 +300,7 @@
                   <div class="d-flex justify-content-center small mb-2"></div>
                   Rp.45.000
                 </div>
-              </div>
+              </div> -->
               <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
               </div>
@@ -307,7 +308,7 @@
           </div>
         </div>
       </div>
-      <div id="products-container" class="row"></div>
+      
     </section>
   </main>
 
