--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -291,8 +291,7 @@
           </div>
           <div class="col mb-5">
             <div class="card h-100 product-card">
-              <div id="products-container" class="row"></div>
-              <!-- <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+              <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
               <div class="card-body p-4">
                 <div class="text-center">
                   <h5 class="fw-bolder">Popular Item</h5>
@@ -300,11 +299,12 @@
                   <div class="d-flex justify-content-center small mb-2"></div>
                   Rp.45.000
                 </div>
-              </div> -->
+              </div>
               <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
               </div>
             </div>
+            <div id="products-container" class="row"></div>
           </div>
         </div>
       </div>
