--- a/Frontend/product.html
+++ b/Frontend/product.html
@@ -64,7 +64,7 @@
             variants.forEach(variant => {
                 const variantElement = document.createElement('div');
                 variantElement.innerHTML = `
-                    <h4>${variant.name}</h4>
+                    <h4>${variant.variant_name}</h4>
                     <p>Price: $${variant.price}</p>
                     <p>Stock: ${variant.stock}</p>
                 `;
