--- a/Frontend/order.html
+++ b/Frontend/order.html
@@ -12,39 +12,48 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-    fetchOrders();
-});
-
-function fetchOrders() {
-    const token = localStorage.getItem('token'); // Get the token from local storage
-
-    fetch('http://174.138.27.151:5000/api/orders', {
-    headers: {
-        'Authorization': `Bearer ${token}` // Include the token in the Authorization header
-    }
-})
-        .then(data => {
-            const ordersContainer = document.getElementById('ordersContainer');
-            data.forEach(order => {
-                const orderDiv = document.createElement('div');
-                orderDiv.className = 'order'; // Add a class for styling if needed
-                // Assuming the order object has id, name, and other properties you want to display
-                orderDiv.innerHTML = `
+            fetchOrders();
+        });
+    
+        function fetchOrders() {
+            const token = localStorage.getItem('token'); // Get the token from local storage
+    
+            fetch('http://174.138.27.151:5000/api/orders', {
+                headers: {
+                    'Authorization': `Bearer ${token}` // Include the token in the Authorization header
+                }
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json(); // Parse the response body to JSON
+            })
+            .then(data => {
+                const ordersContainer = document.getElementById('ordersContainer');
+                // Ensure data is an array before attempting to iterate
+                if (Array.isArray(data)) {
+                    data.forEach(order => {
+                        const orderDiv = document.createElement('div');
+                        orderDiv.className = 'order'; // Add a class for styling if needed
+                        // Assuming the order object has id, name, and other properties you want to display
+                        orderDiv.innerHTML = `                    
                     <h3>Order ID: ${order.id}</h3>
                     <p>Order Name: ${order.name}</p>
                     <p>Quantity: ${order.quantity}</p> <!-- Example additional detail -->
                     <p>Status: ${order.status}</p> <!-- Example additional detail -->
                 `;
-                ordersContainer.appendChild(orderDiv);
+                        // Append more order details here
+                        ordersContainer.appendChild(orderDiv);
+                    });
+                } else {
+                    console.error('Expected an array of orders, but received:', data);
+                }
+            })
+            .catch(error => {
+                console.error('There was a problem with your fetch operation:', error);
             });
-        })
-        .catch(error => {
-            console.error('There was a problem with your fetch operation:', error);
-            // Optionally, display this error on the page
-            const ordersContainer = document.getElementById('ordersContainer');
-            ordersContainer.innerHTML = '<p>Failed to load orders. Please try again later.</p>';
-        });
-}
+        }
     </script>
 </body>
 </html>
