--- a/Frontend/order.html
+++ b/Frontend/order.html
@@ -38,7 +38,7 @@
                         orderDiv.className = 'order'; // Add a class for styling if needed
                         // Assuming the order object has id, name, and other properties you want to display
                         orderDiv.innerHTML = `                    
-                    <h3>Order ID: ${order.id}</h3>
+                    <h3>Order ID: ${order.order_id}</h3>
                     <p>Order Name: ${order.name}</p>
                     <p>Quantity: ${order.quantity}</p> <!-- Example additional detail -->
                     <p>Status: ${order.status}</p> <!-- Example additional detail -->
