--- a/Frontend/order.html
+++ b/Frontend/order.html
@@ -40,7 +40,7 @@
                         orderDiv.innerHTML = `                    
                     <h3>Order ID: ${order.order_id}</h3>
                     <p>Order Name: ${order.name}</p>
-                    <p>Quantity: ${order.quantity}</p> <!-- Example additional detail -->
+                    <p>Price: ${order.total_price}</p> <!-- Example additional detail -->
                     <p>Status: ${order.status}</p> <!-- Example additional detail -->
                 `;
                         // Append more order details here
